Fixed text selection in Quill on Firefox

--- a/darwino-demo/parent-dwo-demo-dominodisc/dwo-demo-dominodisc-shared/src/main/resources/DARWINO-INF/resources/mobile/css/quill.css
+++ b/darwino-demo/parent-dwo-demo-dominodisc/dwo-demo-dominodisc-shared/src/main/resources/DARWINO-INF/resources/mobile/css/quill.css
@@ -1,7 +1,7 @@
-.selectable {
+.selectable, *[contenteditable] {
   -webkit-user-select: auto !important;
   -khtml-user-select: auto !important;
-  -moz-user-select: auto !important;
+  -moz-user-select: text !important;
   -ms-user-select: auto !important;
   -o-user-select: auto !important;
   user-select: auto !important;
